Homepage working. / Chosen not working on survey

--- a/app/public/their_survey.html
+++ b/app/public/their_survey.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en"><head>
   <meta charset="UTF-8">
   <title>FriendFinder</title>
@@ -270,5 +269,4 @@
 
 
 
-</body>
-</html>
+</body></html>
