Fixed survey page. Removed test buttons.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -164,22 +164,22 @@
       <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
        Submit</button>
 
-             <!-- Test Button -->
+      
+      <!-- Test Buttons
       <button class="btn btn-primary btn-lg btn-block" id="test1"><i class="fa fa-check-circle" aria-hidden="true"></i>
         Test 1s</button>
 
-                     <!-- Test Button -->
       <button class="btn btn-primary btn-lg btn-block" id="test2"><i class="fa fa-check-circle" aria-hidden="true"></i>
         Test 2s</button>
 
-      <!-- Test Button -->
       <button class="btn btn-primary btn-lg btn-block" id="test5"><i class="fa fa-check-circle" aria-hidden="true"></i>
         Test 5s</button>
+      -->
   
       <hr>
       <footer class="footer">
         <div class="container">
-          <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+          <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/alithom123/FriendFinder">GitHub Repo</a></p>
         </div>
       </footer>
   
@@ -291,7 +291,7 @@
       //////////////////////////////////
       // SUBMIT TEST
       //////////////////////////////////
-
+/*
       $("#test1").on("click", function(event) {
   
   var testData = {
@@ -353,6 +353,7 @@ $("#test2").on("click", function(event) {
   
           });
         });
+        */
     </script>
   
   </body>
